# matrix

./: CMakeLists.txt  Matrix.xmind  README.md
Main/: CMakeLists.txt  main.cpp
Matrix/: CMakeLists.txt  Matrix.cpp  Matrix.h  MatrixImpl.cpp  MatrixImpl.h
tests/: CMakeLists.txt  matrixTests.cc
